Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +181,13 @@
        "'USA'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mexico = \n",
+    "mexico = 'USA'\n",
     "mexico"
    ]
   },
