--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +181,13 @@
        "'USA'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "USA = \n",
+    "USA = 'mexico'\n",
     "mexico"
    ]
   },
