--- a/index.ipynb
+++ b/index.ipynb
@@ -172,22 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'USA'"
+       "'Mexico'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mex\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
