--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries.append()"
+   ]
   },
   {
    "cell_type": "markdown",
