--- a/index.ipynb
+++ b/index.ipynb
@@ -251,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('T')"
+    "countries.append('Thailand')"
    ]
   },
   {
