--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries "
+   ]
   },
   {
    "cell_type": "code",
