Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set)"
+    "unique_countries = list(set(c))"
    ]
   },
   {
