--- a/index.ipynb
+++ b/index.ipynb
@@ -381,11 +381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set(c))"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
