--- a/index.ipynb
+++ b/index.ipynb
@@ -390,11 +390,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'Morocco',\n",
+       " 'Finland',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Croatia']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries  # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
