Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = len(countries) - len\n",
+    "num_of_repeats = len(countries) - len(unique_countire)\n",
     "num_of_repeats # 3"
    ]
   },
